// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> should match snapshot for default button 1`] = `
<button
  class="root variantSecondary medium"
  type="button"
>
  <div
    class="body"
  />
</button>
`;

exports[`<Button /> when as button should use html button element by default 1`] = `
<button
  class="root variantSecondary medium"
  type="button"
>
  <div
    class="body"
  />
</button>
`;

exports[`<Button /> when colour variants should match snapshot for Danger button 1`] = `
<button
  class="root variantDanger medium"
  type="button"
>
  <div
    class="body"
  />
</button>
`;

exports[`<Button /> when colour variants should match snapshot for Primary button 1`] = `
<button
  class="root variantPrimary medium"
  type="button"
>
  <div
    class="body"
  />
</button>
`;

exports[`<Button /> when colour variants should match snapshot for Secondary button 1`] = `
<button
  class="root variantSecondary medium"
  type="button"
>
  <div
    class="body"
  />
</button>
`;

exports[`<Button /> when custom component should use html anchor element if href value exists 1`] = `
<a
  class="root variantSecondary medium"
  href="abc"
>
  <div
    class="body"
  />
</a>
`;

exports[`<Button /> when isFullWidth should match snapshot 1`] = `
<button
  class="root variantSecondary medium fullWidth"
  type="button"
>
  <div
    class="body"
  />
</button>
`;

exports[`<Button /> when loading should match snapshot for default button 1`] = `
<button
  class="root variantSecondary medium loading"
  disabled=""
  type="button"
>
  <div
    class="root sizeMedium"
  >
    <svg
      class="circular"
      viewBox="25 25 50 50"
    >
      <circle
        class="path"
        cx="50"
        cy="50"
        fill="none"
        r="20"
        stroke-miterlimit="10"
      />
    </svg>
  </div>
</button>
`;

exports[`<Button /> when loading should match snapshot for medium button 1`] = `
<button
  class="root variantSecondary medium loading"
  disabled=""
  type="button"
>
  <div
    class="root sizeMedium"
  >
    <svg
      class="circular"
      viewBox="25 25 50 50"
    >
      <circle
        class="path"
        cx="50"
        cy="50"
        fill="none"
        r="20"
        stroke-miterlimit="10"
      />
    </svg>
  </div>
</button>
`;

exports[`<Button /> when loading should match snapshot for small button 1`] = `
<button
  class="root variantSecondary small loading"
  disabled=""
  type="button"
>
  <div
    class="root sizeMedium"
  >
    <svg
      class="circular"
      viewBox="25 25 50 50"
    >
      <circle
        class="path"
        cx="50"
        cy="50"
        fill="none"
        r="20"
        stroke-miterlimit="10"
      />
    </svg>
  </div>
</button>
`;

exports[`<Button /> when rounded should match snapshot 1`] = `
<button
  class="root variantSecondary medium rounded"
  type="button"
>
  <div
    class="body"
  />
</button>
`;

exports[`<Button /> when size variant should match snapshot for medium button 1`] = `
<button
  class="root variantSecondary medium"
  type="button"
>
  <div
    class="body"
  />
</button>
`;

exports[`<Button /> when size variant should match snapshot for small button 1`] = `
<button
  class="root variantSecondary small"
  type="button"
>
  <div
    class="body"
  />
</button>
`;
